# html_forms

./: .eslintrc.js  .gitignore  Doxyfile  WebpackRule.mjs  binding.gyp  conanfile.txt  make.js  make.mjs  package-lock.json  package.json  project.vim  tsconfig.json
.github/workflows/: create-package-artifacts.yml  install-vendor.yml  on-push.yml  on-release.yml  run-unit-tests.yml  test-package.yml  test-push.yml
boost/: CMakeLists.txt
boost/pkgconfig/: boost-headers.pc
boost/pkgconfig/msvc/: boost-headers.pc
client/include/: html_forms.h
client/src/: html_forms.c
docs/: index.dox
include/: asio-pch.hpp  async_msgstream.hpp  async_mutex.hpp  browser.hpp  html-forms.h  html_forms.h  http_listener.hpp  mime_type.hpp  my-asio.hpp  my-beast.hpp
jslib/: clang.mjs
private/: asio-pch.hpp  browser.hpp  html_connection.h  http_listener.hpp  open-url.hpp  parse_target.hpp  session_lock.hpp
script/: install-boost.sh  install-deps.sh  install-libarchive.sh  parse-package.sh  parse-validate-version.sh  test-release.sh  upload-package.sh  util.sh
src/: AsyncReadStream.ts  CatuiServer.ts  MsgStream.ts  ServerWorker.ts  browser.cpp  browser.ts  catui_server.cc  client.ts  events.ts  forms.js  forms.ts  getFd.ts  html-forms.c  html_forms.c  http_listener.cpp  loading.html  mime_type.cpp  my-asio.cpp  open-url.cpp  server.cpp  server.ts
test/: MsgStream.ts  browser.ts  client.c  escape_string_test.cpp  forms_test.cpp  funcs.zsh  index.css  index.html  other.html  other.js  parse-form-test.cpp  parse_form_test.cpp  test_server.cpp  url_test.cpp
(+67 files in other folders)
